# platform_utils

./: .gitignore  .hgignore  CLAUDE.md  README.rst  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
docs/: api.rst  conf.py  index.rst
platform_utils/: __init__.py  _winpaths.py  blackhole.py  clipboard.py  idle.py  libloader.py  paths.py  process.py  web_browser.py
platform_utils/WinUtils/: AutoStart.py  __init__.py
platform_utils/autostart/: windows.py
platform_utils/shell_integration/: windows.py
tests/: test_paths.py
