[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platform_utils"
version = "1.5.10"
authors = [
    {name = "Christopher Toth", email = "q@q-continuum.net"},
]
description = "Cross-platform utilities for accomplishing some tasks that the stdlib isn't equipped to provide"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "platformdirs",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "mypy>=0.991,<1.0",
]

[project.urls]
Homepage = "https://github.com/q-continuum/platform_utils"
Issues = "https://github.com/q-continuum/platform_utils/issues"

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["win32clipboard", "win32con", "win32api", "Carbon.*", "gtk"]
ignore_missing_imports = true
